# TAComparator

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
Suite/QT/TAComparator/: TAComparator_en_AS.ts
samples/: DynamicPluginProf.itf  busbar_14_d.itf  compare2.itf  first.itf  third.itf
src/core/: Logger.cpp  Logger.h
src/model/: Component.cpp  Metadata.h  ObjectGroup.cpp  ObjectGroup.h  Signal.cpp  Study.cpp  Study.h
src/parser/: DiscoveryParser.cpp  DiscoveryParser.h  ItfParser.cpp  ItfParser.h  PopulationParser.cpp  PopulationParser.h
src/reader/: TextFileReader.cpp  TextFileReader.h
src/ui/: FilePlotSettings.h  FileSelectionWidget.cpp  FileSelectionWidget.h  PlotBrowserWidget.cpp  PlotBrowserWidget.h  PlotDisplayMapper.cpp  PlotDisplayMapper.h  PlotDockWidget.cpp  PlotDockWidget.h  PlotWidget.cpp  PlotWidget.h  StudyBrowserWidget.cpp  StudyBrowserWidget.h
